Navbar Account Section - Alignment Fix

--- a/recruitment-app/src/components/Header/Navbar.scss
+++ b/recruitment-app/src/components/Header/Navbar.scss
@@ -43,7 +43,7 @@
     &__account{
         display: flex;
         padding: 0 90px 0 0;
-        justify-content: end;
+        justify-content: flex-end;
         align-items: center;
         
         &__button{
